<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".AboutActivity">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width = "200dp"
            android:layout_height = "200dp"
            android:src = "@drawable/author_image"
            app:civ_border_color = "#EEEEEE"
            app:civ_border_width = "4dp"
            app:civ_shadow = "true"
            app:civ_shadow_radius = "10"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            app:civ_shadow_color = "#8BC34A"/>


        <TextView
            android:text = "@string/author_name"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "10dp"
            android:textSize = "25sp"
            android:textColor="@android:color/white"
            android:textAlignment = "center"/>

        <TextView
            android:text = "@string/netid_654726321"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "5dp"
            android:layout_marginBottom="30dp"
            android:textSize = "15sp"
            android:textColor="@android:color/white"
            android:textAlignment = "center"/>



        <TextView
            android:layout_margin="5dp"
            android:text = "@string/about_data"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "5dp"
            android:textSize = "15sp"
            android:textColor="@android:color/white" />

    </LinearLayout>



</ScrollView>
