<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">


            <TextView
                android:text = "@string/today"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize = "35sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/about"
                android:text = "@string/about"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:maxLines="1"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:textColor="@android:color/white"
                android:textSize = "20sp"
                android:textStyle="bold"
                />


        </LinearLayout>



        <TextView
            android:text = "@string/your_task"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:maxLines="1"
            android:layout_marginTop = "20dp"
            android:layout_marginStart="10dp"
            android:textSize = "20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/note_item"
            />


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>